# django-object-safety-docs

./: pyproject.toml
docs/: Makefile  requirements.txt
docs/source/: .readthedocs.yaml  conf.py  custom_models.rst  index.rst  object_group_api.rst  permissions_api.rst  usage.rst
